<resources>
    <string name="app_name">GameX</string>
    <string name="submit_request">Submit Request</string>
    <string name="title_activity_log_in">logInActivity</string>
    <string name="gender">Gender</string>
    <string name="user_details">User Details</string>
    <string name="full_name">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="dob">Date of Birth</string>
    <string name="city">City/Area Code</string>
    <string name="predict_and_earn">Predict and Earn</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="balance">0.0</string>
    <string name="start_the_match">START THE MATCH</string>
    <string name="match_no">Match No.</string>
    <string name="count_down">Count Down</string>
    <string name="wallet">Wallet</string>
    <string name="match_num">0000</string>
    <string name="time">01:00</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="violet">Violet</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="earning_records">Earning Records</string>
    <string name="read_rules">Read Rules</string>
    <string name="back_button">Back Button</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_current_balance">Total Current Balance</string>
    <string name="withdrawable_amount">Withdrawable Amount</string>
    <string name="withdraw">Withdraw</string>
    <string name="add_balance">Add Balance</string>
    <string name="addingBalance">100.0</string>
    <string name="add">Add+</string>
    <string name="poster">poster</string>
    <string name="total_earned">Total Earned</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="country_code">+91</string>
    <string name="invite">Invite</string>
    <string name="how_to_refer">How to Refer :</string>
    <string name="terms_and_conditions">Terms and Conditions :</string>
    <string name="withdraw_details">Withdraw Details</string>
    <string name="amount_here">Amount Here</string>
    <string name="upi_here">UPI Here</string>
    <string name="investment_details">Investment Details</string>
    <string name="amount_between_10_100">Amount Between 10–100</string>
    <string name="invest">Invest</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="mobile_number_here">Mobile Number Here</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_here">OTP Here</string>
    <string name="continueBtn">Continue</string>
    <string name="submit">Submit</string>
    <string name="please_wait">Please wait...</string>
    <string name="loading">Loading...</string>
    <string name="generatedcolor">generatedColor</string>
    <string name="rule_of_the_game">Rule of the Game</string>
    <string name="cancel_btn">cancelBtn</string>
    <string name="tc_of_withdraw">1. If you request for money less than 300 then 20% transfer charge will be deducted for amount. \n2. If you request for money less than 700 then 3% transfer charge will be deducted for amount.\n3. If you request for money less than 1000 then 2% transfer charge will be deducted for amount.\n4. If you request for money less than 1500 then 1% transfer charge will be deducted for amount.</string>
    <string name="read_t_amp_c"><![CDATA[Read T&C]]></string>
    <string name="tnx_charges_apply">Tnx Charges Apply*</string>
    <string name="hide">Hide</string>
    <string name="read_t_c"><![CDATA[Read T&C]]></string>
    <string name="your_request_will_be_completed_within_24_hour">Your request will be completed within 24 hour.\nAmount should be between 250 and 1500.\nOnly one withdraw request will be execute once.</string>
    <string name="view_history">View History</string>
    <string name="try_again">Try Again</string>
    <string name="getting_status">Getting Status</string>
    <string name="howToRefer">1. Enter the number of referent.\n2. Click on Invite.\n3. Send msg to referent.\n 4. If referent download app and fill your number in \"Referred By\" Section.\n5. After Successful Referral You will get up to Rs 100 in your wallet and they get up to Rs 50.</string>
    <string name="termsOfReferral">1. The user will be eligible for referral only if user has previously recharged wallet for more than Rs 200.\n2. If your referral is found invalid for any reason then the referral will be cancelled.\n3. If more than one user refers a new user, the referral bonus will be given only to the user whose mobile number the new user fills in the "Referred By" section while signing up.</string>
    <string name="no_internet">No Internet!</string>
    <string name="img">img</string>
    <string name="referred_by">Referred By</string>
    <string name="why">Why?</string>
    <string name="i_agree_the_term_amp_condition"><![CDATA[I agree the Term & Condition.]]></string>
    <string name="read">Read</string>
    <string name="play_again">Play Again</string>
</resources>