<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="#EAD4D4"
    android:gravity="center_vertical"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_details"
        android:textSize="35sp"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:text="@string/full_name"
                app:drawableEndCompat="@drawable/asterisk_15" />
            <EditText
                android:id="@+id/fullNameSignPg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:background="@color/white"
                android:padding="10dp"
                android:autofillHints="Name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:text="@string/gender"
                app:drawableEndCompat="@drawable/asterisk_15" />
            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="false"
                    android:textSize="20sp" />
                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:checked="false"
                    android:textSize="20sp" />
                <RadioButton
                    android:id="@+id/radioOtherGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:checked="false"
                    android:textSize="20sp" />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:drawableEndCompat="@drawable/asterisk_15"
                android:textSize="20sp"
                android:text="@string/dob" />
            <TextView
                android:id="@+id/DOB_SignPg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@color/white"
                android:padding="10dp"
                app:drawableEndCompat="@drawable/baseline_calendar_month_24" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:text="@string/city" />
            <EditText
                android:id="@+id/citySignPg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:background="@color/white"
                android:padding="10dp"
                android:autofillHints="address"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/referred_by"/>
                <TextView
                    android:id="@+id/whyReferredBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#F32A2A"
                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/why"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/countryCode"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:gravity="end"
                    android:background="@color/white"
                    android:focusable="false"
                    android:padding="10dp"
                    android:text="@string/country_code"
                    android:inputType="none" />
                <EditText
                    android:id="@+id/referredByNoSignPg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:autofillHints="phone" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/SignTC_CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/i_agree_the_term_amp_condition"/>
                <TextView
                    android:id="@+id/readSignTC_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="#F32A2A"
                    android:textSize="18sp"
                    android:text="@string/read"/>
            </RelativeLayout>
            <Button
                android:id="@+id/submitBtnSignPg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:text="@string/submit"/>
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>