<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25dp"
    android:background="#8AE6A1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_details"
        android:textSize="35sp"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/your_request_will_be_completed_within_24_hour"/>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tnx_charges_apply"
                    android:textStyle="bold"
                    android:textColor="#DB0808"/>
                <TextView
                    android:id="@+id/readWithdrawTC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/read_t_amp_c"
                    android:textStyle="bold"
                    android:textColor="#FF5722"
                    android:gravity="end"/>
            </LinearLayout>
            <TextView
                android:id="@+id/withdrawTC"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/withdrawingAmount"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/amount_here"
                android:inputType="numberDecimal"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:padding="10dp"
                android:autofillHints="null" />
            <EditText
                android:id="@+id/withdrawUpiId"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/upi_here"
                android:autofillHints="upi"
                android:inputType="textImeMultiLine"
                android:layout_marginTop="25dp"
                android:background="@color/white"
                android:padding="10dp"/>
            <Button
                android:id="@+id/withdrawRequestBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_request"
                android:layout_gravity="end"
                android:textSize="20sp"
                android:layout_marginTop="25dp" />
        </LinearLayout>
    </ScrollView>
</android.widget.LinearLayout>