<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".referEarnActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:backgroundTint="#72BD75"
        android:background="@android:drawable/dialog_holo_light_frame">
        <ImageButton
            android:id="@+id/backBtnReferPg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#72BD75"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back_button" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refer_and_earn"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="16dp">
                <ImageView
                    android:id="@+id/posterReferPg"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_height="219dp"
                    android:src="@drawable/refer_poster2"
                    android:contentDescription="@string/poster" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_earned"/>
                    <TextView
                        android:id="@+id/totalEarnReferPg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/balance"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_mobile_number"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/country_code"
                            android:enabled="false"
                            android:textColor="@color/black"
                            android:autofillHints="null" />
                        <EditText
                            android:id="@+id/phoneReferringReferPg"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:autofillHints="phone" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end">
                            <Button
                                android:id="@+id/inviteBtnReferPg"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="15dp"
                                android:backgroundTint="#72BD75"
                                android:text="@string/invite"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_refer"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/howToReferReferPg"
                    android:layout_width="match_parent"
                    android:text="@string/howToRefer"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/terms_and_conditions"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/termsReferPg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/termsOfReferral"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>