<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".walletActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:backgroundTint="#FFA8A8"
        android:gravity="center_vertical"
        android:background="@android:drawable/dialog_holo_light_frame">
        <ImageButton
            android:id="@+id/backBtnWalletPg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#FFA8A8"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back_button" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">
            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="45dp"
                android:layout_marginEnd="10dp">
                <ImageView
                    android:id="@+id/profileViewWalletPg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/pro"
                    android:contentDescription="@string/profile" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_current_balance"/>
                    <TextView
                        android:id="@+id/totalBalanceWalletPg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">
                    <Button
                        android:id="@+id/historyButtonWalletPg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FFA8A8"
                        android:text="@string/view_history"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="#A0A0A0"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/withdrawable_amount"/>
                    <TextView
                        android:id="@+id/withdrawableAmountWalletPg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">
                    <Button
                        android:id="@+id/withdrawButtonWalletPg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FFA8A8"
                        android:text="@string/withdraw"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_balance"/>
            <EditText
                android:id="@+id/amountAddingEt"
                android:layout_width="100dp"
                android:layout_height="42dp"
                android:textColor="#D1030A"
                android:text="@string/addingBalance"/>
        </LinearLayout>
        <Button
            android:id="@+id/addMoneyWalletPg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFA8A8"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end|center_vertical"
            android:text="@string/add"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="16dp">
        <ImageView
            android:id="@+id/posterWalletPg"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="219dp"
            android:src="@drawable/refer_poster2"
            android:contentDescription="@string/poster" />
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>